[tool.poetry]
name = "wild-sort"
version = "0.1.0"
description = ""
authors = ["CaelCoruscare <caelsumner@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
pyinstaller = "^5.13.2"
pyside6 = "^6.5.2"
natsort = "^8.4.0"
exifread = "^3.0.0"
pyparsing = "^3.1.1"
ultralytics = "^8.0.188"
onnx = "^1.14.1"
torch = "^2.0.1"
torchvision = "^0.15.2"
torchaudio = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
